ocp_pgadmin_sit.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${DEPLOY_APP_NAME}
  namespace: ${PROJECT_NAMESPACE}
spec:
  selector:
    matchLabels:
      app: ${DEPLOY_APP_NAME}
   
  template:
    metadata:
      labels:
        app: ${DEPLOY_APP_NAME}
    spec:
      #serviceAccountName: javauser
      containers:
        - name: ${DEPLOY_APP_NAME}
          image: ${REGISTRY_DOMAIN}/${CI_PROJECT_NAMESPACE}/${IMAGE_NAME}:${CI_PIPELINE_ID}
          # livenessProbe:
          #   httpGet:
          #     path: /healthy_check
          #     port: 5050
          #   initialDelaySeconds: 30
          #   periodSeconds: 60
          #   failureThreshold: 3
          #   timeoutSeconds: 60
          # readinessProbe:
          #   httpGet:
          #     path: /healthy_check
          #     port: 5050
          #   failureThreshold: 5
          #   initialDelaySeconds: 30
          #   periodSeconds: 60
          #   successThreshold: 1
          #   timeoutSeconds: 60
          livenessProbe:
            httpGet:
              path: /misc/ping
              port: 5050
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
            timeoutSeconds: 10

          readinessProbe:
            httpGet:
              path: /misc/ping
              port: 5050
            initialDelaySeconds: 15
            periodSeconds: 15
            failureThreshold: 3
            timeoutSeconds: 5

          ports:
            - containerPort: 5050
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "2"
              memory: "2048Mi"
          volumeMounts:
            - name: ${PROJECT_NAME}
              # mountPath: /DAT-NAS/pgadmin
              mountPath: /var/lib/pgadmin
              # 設定子目路
              subPath: pgadmin_sit
      volumes:
        - name: ${PROJECT_NAME}
          persistentVolumeClaim: 
              claimName: dat-nas-pvc
      nodeSelector:
        node-role.kubernetes.io/worker: ''
      imagePullSecrets:
        - name: ${OCP_PULL_SECRETS}
---
apiVersion: v1
kind: Service
metadata:
  name: ${DEPLOY_APP_NAME}
  namespace: ${PROJECT_NAMESPACE}
  labels:
    app: ${DEPLOY_APP_NAME}
spec:
  selector:
    app: ${DEPLOY_APP_NAME}
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5050
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ${DEPLOY_APP_NAME}
  namespace: ${PROJECT_NAMESPACE}
  annotations:
    haproxy.router.openshift.io/timeout: 300s
spec:
  host: ${DEPLOY_APP_NAME}.${PROJECT_NAMESPACE}.${OCP_HOST_DOMAIN}
  path: "/" 
  to:
    kind: Service
    name: ${DEPLOY_APP_NAME}
